# imgui-test-engine-example-bazel

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  app_logic.cpp  app_logic.h  extensions.bzl  imgui.ini  main.cpp  test_simple.cpp
docs/: Prompts.txt  TESTING_README.md  TEST_MODE_OPTIONS.md
scripts/: build_bazel.sh  diagnose_headers.sh  generate_coverage.sh  run_tests_coverage.sh  run_tests_gui_coverage.sh  run_tests_gui_then_coverage.sh  setup_bazel.sh  xvfb_test_wrapper.sh
