load("@bazel_skylib//rules:run_binary.bzl", "run_binary")

# Platform configuration
config_setting(
    name = "linux",
    constraint_values = ["@platforms//os:linux"],
)

config_setting(
    name = "macos",
    constraint_values = ["@platforms//os:macos"],
)

config_setting(
    name = "windows",
    constraint_values = ["@platforms//os:windows"],
)

# Main application binary
cc_binary(
    name = "imgui_test_app",
    srcs = ["main.cpp"],
    deps = [
        "@imgui//:imgui",
        "@imgui_test_engine//:test_engine",
        "@glfw//:glfw",
    ],
    copts = [
        "-std=c++17",
        "-DIMGUI_TEST_ENGINE_ENABLE_COROUTINE_STDTHREAD_IMPL=1",
    ],
    linkopts = select({
        ":linux": ["-lGL", "-ldl"],
        ":macos": ["-framework", "OpenGL"],
        ":windows": ["-lopengl32"],
    }),
)

# Test binary with coverage instrumentation
cc_binary(
    name = "imgui_test_app_coverage",
    srcs = ["main.cpp"],
    deps = [
        "@imgui//:imgui",
        "@imgui_test_engine//:test_engine",
        "@glfw//:glfw",
    ],
    copts = [
        "-std=c++17",
        "-DIMGUI_TEST_ENGINE_ENABLE_COROUTINE_STDTHREAD_IMPL=1",
        "-fprofile-arcs",
        "-ftest-coverage",
        "--coverage",
    ],
    linkopts = select({
        ":linux": ["-lGL", "-ldl", "--coverage"],
        ":macos": ["-framework", "OpenGL", "--coverage"],
        ":windows": ["-lopengl32"],
    }),
)

# Test targets
cc_test(
    name = "imgui_test",
    srcs = ["main.cpp"],
    deps = [
        "@imgui//:imgui",
        "@imgui_test_engine//:test_engine",
        "@glfw//:glfw",
    ],
    args = [
        "--test",
        "--headless",
        "--report",
    ],
    copts = [
        "-std=c++17",
        "-DIMGUI_TEST_ENGINE_ENABLE_COROUTINE_STDTHREAD_IMPL=1",
    ],
    linkopts = select({
        ":linux": ["-lGL", "-ldl"],
        ":macos": ["-framework", "OpenGL"],
        ":windows": ["-lopengl32"],
    }),
    size = "medium",
)

# Widget tests only
cc_test(
    name = "test_widgets",
    srcs = ["main.cpp"],
    deps = [
        "@imgui//:imgui",
        "@imgui_test_engine//:test_engine",
        "@glfw//:glfw",
    ],
    args = [
        "--test",
        "--headless",
        "--filter",
        "Widgets",
    ],
    copts = [
        "-std=c++17",
        "-DIMGUI_TEST_ENGINE_ENABLE_COROUTINE_STDTHREAD_IMPL=1",
    ],
    linkopts = select({
        ":linux": ["-lGL", "-ldl"],
        ":macos": ["-framework", "OpenGL"],
        ":windows": ["-lopengl32"],
    }),
    size = "small",
)

# Integration tests
cc_test(
    name = "test_integration",
    srcs = ["main.cpp"],
    deps = [
        "@imgui//:imgui",
        "@imgui_test_engine//:test_engine",
        "@glfw//:glfw",
    ],
    args = [
        "--test",
        "--headless",
        "--filter",
        "Integration",
    ],
    copts = [
        "-std=c++17",
        "-DIMGUI_TEST_ENGINE_ENABLE_COROUTINE_STDTHREAD_IMPL=1",
    ],
    linkopts = select({
        ":linux": ["-lGL", "-ldl"],
        ":macos": ["-framework", "OpenGL"],
        ":windows": ["-lopengl32"],
    }),
    size = "medium",
)

# Performance tests
cc_test(
    name = "test_performance",
    srcs = ["main.cpp"],
    deps = [
        "@imgui//:imgui",
        "@imgui_test_engine//:test_engine",
        "@glfw//:glfw",
    ],
    args = [
        "--test",
        "--headless",
        "--filter",
        "Performance",
    ],
    copts = [
        "-std=c++17",
        "-DIMGUI_TEST_ENGINE_ENABLE_COROUTINE_STDTHREAD_IMPL=1",
    ],
    linkopts = select({
        ":linux": ["-lGL", "-ldl"],
        ":macos": ["-framework", "OpenGL"],
        ":windows": ["-lopengl32"],
    }),
    size = "large",
    timeout = "long",
)

# Test suite combining all tests
test_suite(
    name = "all_tests",
    tests = [
        ":imgui_test",
        ":test_widgets",
        ":test_integration",
        ":test_performance",
    ],
)

# Development files
filegroup(
    name = "dev_files",
    srcs = [
        "main.cpp",
        "BUILD.bazel",
        "MODULE.bazel",
        "extensions.bzl",
        ".bazelrc",
    ],
)
